--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
     "local>hmcts/.github:renovate-config",
-    "github>hmcts/sscs-shared-infrastructure//renovate.json"
+    "github>hmcts/sscs-common//.github/sscs-renovate.json"
   ]
 }
